08/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-front
  labels:
    app: app-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: config-value
          mountPath: /usr/share/nginx/html
      volumes:
      - name: config-value
        configMap: 
           name: config-test
