08/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: test-configmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-configmap
  template:
    metadata:
      labels:
        app: test-configmap
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-value
          mountPath: /usr/share/nginx/html
     
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
      - name: config-value
        configMap: 
           name: config-test
