08/svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: app-front
  ports:
    - protocol: TCP
      port: 80     
      name: nginx-port
    - protocol: TCP
      port: 443    
      name: ssh-port
