08/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-configmap
spec:
  selector:
    app: test-configmap
  type: NodePort
  ports:
    - protocol: TCP
      port: 80     
      name: nginx-port
      nodePort: 30080
